@@ -1,3 +1,3 @@
   <nav id="{$menu->htmlId}">
-    {foreach $menu as $item}{continueIf !$item->allowed}<a href="{plink $item->link}">{_$item->text}</a>{if !$iterator->isLast()} {/if}{/foreach}
+    {foreach $menu->allowedItems as $item}<a href="{plink $item->link}">{_$item->text}</a>{if !$iterator->isLast()} {/if}{/foreach}
   </nav>
