@@ -88,6 +88,38 @@ class MenuTest extends \Tester\TestCase {
       unset($this->menu[0]);
     }, \OutOfRangeException::class);
   }
+  
+  /**
+   * @return void
+   */
+  function testGetAllowedItems() {
+    $item1 = new MenuItem("Test:", "Test");
+    $item1->addCondition(new class implements IMenuItemCondition {
+      function getName(): string {
+        return "true";
+      }
+      
+      function isAllowed($parameter = NULL): bool {
+        return true;
+      }
+    }, NULL);
+    $this->menu[] = $item1;
+    $this->menu[] = $item1;
+    $item2 = new MenuItem("Test:", "Test");
+    $item2->addCondition(new class implements IMenuItemCondition {
+      function getName(): string {
+        return "false";
+      }
+    
+      function isAllowed($parameter = NULL): bool {
+        return false;
+      }
+    }, NULL);
+    $this->menu[] = $item2;
+    $items = $this->menu->getAllowedItems();
+    Assert::type("array", $items);
+    Assert::count(2, $items);
+  }
 }
 
 $test = new MenuTest;
