@@ -1,5 +1,6 @@
 Version 2.0.0-dev
 - removed section menu.conditions
+- added virtual property Menu::$allowedItems
 
 Version 1.1.0
 - menu item conditions can be manually registered as services now
